...
                                  android:layout_height="wrap_content"
                                  android:paddingRight="40dp"
                                  android:paddingLeft="40dp"
                                  android:layout_marginTop="8dp">

                        <EditText
                                android:id="@+id/student_first_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="FIRST NAME"
                                android:text="@{user.fname}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_last_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{user.lname}"
                                android:hint="LAST NAME"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_user_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{user.username}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_email_edit_text"
                                android:layout_width="match_parent"
                                android:inputType="textEmailAddress"
                                android:layout_height="wrap_content"
                                android:text="@{user.emailAddress}"
                                android:hint="EMAIL"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_password_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="PASSWORD"
                                android:text="@{user.password}"
                                android:textSize="15dp"
...
                                android:layout_height="wrap_content"
                                android:text="Select Grade :"
                                android:fontFamily="@font/masque"
                        />

                        <Spinner
                                android:id="@+id/section_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"

                        />
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Select Parent :"
                                android:fontFamily="@font/masque"
                        />
                        <Spinner
                                android:id="@+id/parent_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"

                        />
                        <RadioGroup
                                android:id="@+id/gender_radio_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                            <RadioButton
                                    android:id="@+id/male_radio_button"
                                    android:layout_width="wrap_content"
...
                                    android:text="Female"
                                    android:fontFamily="@font/spiderman_homecoming"
                                    android:layout_height="wrap_content"/>
                        </RadioGroup>

                        <Button
                                android:id="@+id/student_register_button"
                                android:layout_width="wrap_content"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="30dp"
...
