<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user" type="com.schoolfam.parcher.data.user.User"/>
        <variable name="teacher" type="com.schoolfam.parcher.data.teacher.Teacher"/>
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Fragments.AdminFragments.AddTeachersFragment"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="Register Teacher"
                      android:fontFamily="@font/masque"
                      android:gravity="center"
                      android:textColor="@color/colorPrimary"
                      android:textSize="25sp"
                      app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
                      tools:layout_editor_absoluteX="0dp" android:id="@+id/register_teacher_textView"/>
            <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/register_teacher_textView">

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:id="@+id/card_view"
                        android:layout_gravity="center"
                        app:cardCornerRadius="10dp"
                >

                    <LinearLayout android:layout_width="match_parent"
                                  android:orientation="vertical"
                                  android:layout_height="wrap_content"
                                  android:paddingRight="40dp"
                                  android:paddingLeft="40dp"
                                  android:layout_marginTop="8dp">

                        <EditText
                                android:id="@+id/teacher_first_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="FIRST NAME"
                                android:text="@{user.fname}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/teacher_last_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="LAST NAME"
                                android:text="@{user.lname}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/teacher_user_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="USER NAME"
                                android:text="@{user.username}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/teacher_email_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:text="@{user.emailAddress}"
                                android:hint="EMAIL"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/teacher_password_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="PASSWORD"
                                android:text="@{user.password}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />

                        <TextView
                                android:layout_marginTop="20dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Select Grade :"
                                android:fontFamily="@font/masque"
                        />

                        <Spinner
                                android:id="@+id/teacher_section_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"

                        />
                        <RadioGroup
                                android:id="@+id/teacher_gender_radio_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                            <RadioButton
                                    android:id="@+id/teacher_male_radio_button"
                                    android:layout_width="wrap_content"
                                    android:text="@{user.gender}"
                                    android:checked="true"
                                    android:fontFamily="@font/spiderman_homecoming"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"/>
                            <RadioButton
                                    android:id="@+id/teacher_female_radio_button"
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@{user.gender}"
                                    android:fontFamily="@font/spiderman_homecoming"
                                    android:layout_height="wrap_content"/>
                        </RadioGroup>

                        <Button
                                android:id="@+id/teacher_register_button"
                                android:layout_width="wrap_content"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="30dp"
                                android:layout_marginBottom="50dp"
                                android:text="Register"
                                android:textColor="#fff"
                                android:background="@drawable/round_button"
                        />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>