...
                                  android:layout_height="wrap_content"
                                  android:paddingRight="40dp"
                                  android:paddingLeft="40dp"
                                  android:layout_marginTop="8dp">

                        <EditText
                                android:id="@+id/parent_first_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="FIRST NAME"
                                android:text="@{user.fname}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/parent_last_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="LAST NAME"
                                android:text="@{user.lname}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/parent_user_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="USER NAME"
                                android:text="@{user.username}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/parent_email_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="EMAIL"
                                android:textSize="15dp"
                                android:text="@{user.emailAddress}"
                                android:inputType="textEmailAddress"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/parent_password_edit_text"
                                android:inputType="textPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="PASSWORD"
                                android:text="@{user.password}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/parent_phone_edit_text"
                                android:inputType="phone"
                                android:text="@{parent.phoneNumber}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="PHONE NUMBER "
                                android:textSize="15dp"
...
                                android:layout_marginTop="30dp"
                        />


                        <RadioGroup
                                android:layout_marginTop="30dp"
                                android:id="@+id/parent_gender_radio_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                            <RadioButton
                                    android:id="@+id/parent_male_radio_button"
                                    android:layout_width="wrap_content"
...
                                    android:text="Female"
                                    android:fontFamily="@font/spiderman_homecoming"
                                    android:layout_height="wrap_content"/>
                        </RadioGroup>

                        <Button
                                android:id="@+id/parent_register_button"
                                android:layout_width="wrap_content"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="30dp"
...
